# macro_recorder

./: .gitignore  README.md  cli.py  macro_recorder.code-workspace  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml
src/: __init__.py  cli.py  config.py  core.py  countdown.py  io_adapters.py  models.py  storage.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_countdown.py  test_io_adapters.py  test_main.py  test_models.py  test_storage.py
