[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macro_recorder"
version = "0.1.0"
description = "Mouse and Keyboard Macro Recorder/Player"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "John Fallot", email = "john.fallot@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynput",
    "pyautogui",
    "keyboard",
    "mouse",
]

[project.scripts]
macro-recorder = "cli:main"

[project.urls]
"Homepage" = "https://github.com/Pathos315/macro_recorder"
"Bug Tracker" = "https://github.com/Pathos315/macro_recorder/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"