[tool.poetry]
name = "macro_recorder"
version = "0.1.0"
description = "Mouse and Keyboard Macro Recorder/Player"
authors = ["John Fallot <john.fallot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Pathos315/macro_recorder"
repository = "https://github.com/Pathos315/macro_recorder"
documentation = "https://github.com/Pathos315/macro_recorder"
keywords = ["macro", "recorder", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
pynput = "*"
pyautogui = "*"
keyboard = "*"
mouse = "*"
requires-python = ">=3.9"

[tool.poetry.scripts]
macro-recorder = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
